--- a/UIs/nInterferometry1.ui
+++ b/UIs/nInterferometry1.ui
@@ -62,7 +62,7 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../resources/icons/icons.qrc">
+         <iconset resource="../qrc/icons.qrc">
           <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
         </property>
        </widget>
@@ -256,7 +256,7 @@
   <tabstop>numAngle</tabstop>
  </tabstops>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
