--- a/UIs/nMonitor.ui
+++ b/UIs/nMonitor.ui
@@ -94,7 +94,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
