--- a/UIs/nLineout.ui
+++ b/UIs/nLineout.ui
@@ -138,7 +138,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../qrc/icons.qrc">
      <normaloff>:/icons/autoRefresh.png</normaloff>
      <normalon>:/icons/center.png</normalon>:/icons/autoRefresh.png</iconset>
    </property>
@@ -160,7 +160,7 @@
     <bool>false</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../qrc/icons.qrc">
      <normaloff>:/icons/lockColor.png</normaloff>
      <normalon>:/icons/lockColor.png</normalon>:/icons/lockColor.png</iconset>
    </property>
@@ -184,7 +184,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
