--- a/UIs/nPython.ui
+++ b/UIs/nPython.ui
@@ -273,7 +273,7 @@
   </widget>
   <action name="actionRun_script">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../qrc/icons.qrc">
      <normaloff>:/icons/filePy.png</normaloff>:/icons/filePy.png</iconset>
    </property>
    <property name="text">
@@ -289,7 +289,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
