--- a/UIs/nVISAR1.ui
+++ b/UIs/nVISAR1.ui
@@ -620,6 +620,35 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="Notes">
+       <property name="neutrinoSave" stdset="0">
+        <bool>true</bool>
+       </property>
+       <attribute name="title">
+        <string>Notes</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_6">
+        <property name="leftMargin">
+         <number>0</number>
+        </property>
+        <property name="topMargin">
+         <number>0</number>
+        </property>
+        <property name="rightMargin">
+         <number>0</number>
+        </property>
+        <property name="bottomMargin">
+         <number>0</number>
+        </property>
+        <item row="0" column="0">
+         <widget class="QTextEdit" name="notes">
+          <property name="neutrinoSave" stdset="0">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
