--- a/UIs/nVISAR1.ui
+++ b/UIs/nVISAR1.ui
@@ -53,7 +53,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -262,7 +262,7 @@
           <property name="title">
            <string>Reference and Shot</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout_9">
+          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,1,1">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -275,8 +275,8 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
-           <item row="0" column="0">
-            <widget class="QComboBox" name="sopRef">
+           <item row="0" column="2">
+            <widget class="QComboBox" name="sopShot">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
@@ -288,13 +288,34 @@
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="QComboBox" name="sopShot">
+            <widget class="QComboBox" name="sopRef">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
               </font>
              </property>
              <property name="neutrinoImage" stdset="0">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QCheckBox" name="enableSOP">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="toolTip">
+              <string>Enable SOP</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+             <property name="neutrinoSave" stdset="0">
               <bool>true</bool>
              </property>
             </widget>
