--- a/UIs/nCustomPlot.ui
+++ b/UIs/nCustomPlot.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>444</width>
-    <height>275</height>
+    <width>450</width>
+    <height>276</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,21 +17,21 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,1,0">
     <property name="spacing">
-     <number>4</number>
+     <number>2</number>
     </property>
     <property name="leftMargin">
-     <number>4</number>
+     <number>2</number>
     </property>
     <property name="topMargin">
-     <number>4</number>
+     <number>2</number>
     </property>
     <property name="rightMargin">
-     <number>4</number>
+     <number>2</number>
     </property>
     <property name="bottomMargin">
-     <number>4</number>
+     <number>2</number>
     </property>
     <item>
      <widget class="QGroupBox" name="groupBox">
@@ -134,8 +134,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>430</width>
-            <height>142</height>
+            <width>440</width>
+            <height>149</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout">
@@ -152,19 +152,19 @@
             <number>0</number>
            </property>
            <item row="0" column="0">
-            <layout class="QGridLayout" name="labels_layout" columnstretch="1,0,0,0,0,2">
+            <layout class="QGridLayout" name="labels_layout" columnstretch="0,1,0,0,0,0,2">
              <property name="verticalSpacing">
               <number>0</number>
              </property>
-             <item row="0" column="5">
-              <widget class="QLabel" name="label_9">
+             <item row="0" column="1">
+              <widget class="QLabel" name="label_2">
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
                 </font>
                </property>
                <property name="text">
-                <string>Range</string>
+                <string>Label</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignBottom|Qt::AlignHCenter</set>
@@ -172,21 +172,6 @@
               </widget>
              </item>
              <item row="0" column="4">
-              <widget class="QLabel" name="label_7">
-               <property name="font">
-                <font>
-                 <pointsize>10</pointsize>
-                </font>
-               </property>
-               <property name="text">
-                <string>Font</string>
-               </property>
-               <property name="alignment">
-                <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="3">
               <widget class="QLabel" name="label_5">
                <property name="font">
                 <font>
@@ -201,7 +186,7 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="2">
+             <item row="0" column="3">
               <widget class="QLabel" name="label_4">
                <property name="font">
                 <font>
@@ -216,7 +201,37 @@
                </property>
               </widget>
              </item>
-             <item row="0" column="1">
+             <item row="0" column="6">
+              <widget class="QLabel" name="label_9">
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Range</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="5">
+              <widget class="QLabel" name="label_7">
+               <property name="font">
+                <font>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Font</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignBottom|Qt::AlignHCenter</set>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
               <widget class="QLabel" name="label_3">
                <property name="font">
                 <font>
@@ -232,14 +247,14 @@
               </widget>
              </item>
              <item row="0" column="0">
-              <widget class="QLabel" name="label_2">
+              <widget class="QLabel" name="label_8">
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
                 </font>
                </property>
                <property name="text">
-                <string>Label</string>
+                <string>Show</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignBottom|Qt::AlignHCenter</set>
@@ -249,7 +264,6 @@
             </layout>
            </item>
           </layout>
-          <zorder></zorder>
          </widget>
         </widget>
        </item>
