--- a/UIs/nLine.ui
+++ b/UIs/nLine.ui
@@ -431,7 +431,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../neutrino-build/src/icons.qrc">
+           <iconset resource="../qrc/icons.qrc">
             <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
           </property>
          </widget>
@@ -461,7 +461,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../neutrino-build/src/icons.qrc">
+           <iconset resource="../qrc/icons.qrc">
             <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
           </property>
          </widget>
@@ -475,7 +475,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../neutrino-build/src/icons.qrc">
+           <iconset resource="../qrc/icons.qrc">
             <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
           </property>
          </widget>
@@ -486,7 +486,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../neutrino-build/src/icons.qrc">
+           <iconset resource="../qrc/icons.qrc">
             <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
           </property>
          </widget>
@@ -632,7 +632,7 @@
   </action>
   <action name="actionSavePDF">
    <property name="icon">
-    <iconset resource="../../neutrino-build/src/icons.qrc">
+    <iconset resource="../qrc/icons.qrc">
      <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
    </property>
    <property name="text">
@@ -669,7 +669,7 @@
   <tabstop>colorButton</tabstop>
  </tabstops>
  <resources>
-  <include location="../../neutrino-build/src/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
