--- a/UIs/nVISAR2.ui
+++ b/UIs/nVISAR2.ui
@@ -114,7 +114,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../../neutrino-build/src/icons.qrc">
+         <iconset resource="../qrc/icons.qrc">
           <normaloff>:/icons/refresh.png</normaloff>:/icons/refresh.png</iconset>
         </property>
         <property name="neutrinoSave" stdset="0">
@@ -192,7 +192,7 @@
             <string>...</string>
            </property>
            <property name="icon">
-            <iconset resource="../../neutrino-build/src/icons.qrc">
+            <iconset resource="../qrc/icons.qrc">
              <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
            </property>
            <property name="neutrinoSave" stdset="0">
@@ -429,7 +429,7 @@
   <tabstop>multRef</tabstop>
  </tabstops>
  <resources>
-  <include location="../../neutrino-build/src/icons.qrc"/>
+  <include location="../qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
