--- a/UIs/nVISAR1.ui
+++ b/UIs/nVISAR1.ui
@@ -53,7 +53,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -224,7 +224,7 @@
          </widget>
         </item>
         <item>
-         <widget class="nCustomPlotMouseX3Y" name="plotVelocity" native="true">
+         <widget class="nVisarPlot" name="plotVelocity" native="true">
           <property name="mouseTracking">
            <bool>true</bool>
           </property>
@@ -634,7 +634,7 @@
          </widget>
         </item>
         <item row="3" column="0" colspan="4">
-         <widget class="nCustomPlotMouseX2Y" name="sopPlot" native="true">
+         <widget class="nSOPPlot" name="sopPlot" native="true">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -868,15 +868,15 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>nCustomPlotMouseX3Y</class>
+   <class>nSOPPlot</class>
    <extends>QWidget</extends>
-   <header>nCustomPlots.h</header>
+   <header>nVisar.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>nCustomPlotMouseX2Y</class>
+   <class>nVisarPlot</class>
    <extends>QWidget</extends>
-   <header>nCustomPlots.h</header>
+   <header>nVisar.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
