--- a/UIs/nVISAR2.ui
+++ b/UIs/nVISAR2.ui
@@ -261,7 +261,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox_4">
         <property name="toolTip">
-         <string>Sweep speed (if multiple values take the polynome)</string>
+         <string>Time resolution in pixel</string>
         </property>
         <property name="title">
          <string>Time resolution</string>
