osx plugin working

--- a/plugins/plugin_test/test-plugin.ui
+++ b/plugins/plugin_test/test-plugin.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>261</width>
+    <height>179</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
        </font>
       </property>
       <property name="text">
-       <string>Hi,I'm a test plugin!</string>
+       <string>Hi! I'm a test plugin!</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
