--- a/plugins/plugin_test/test-plugin.ui
+++ b/plugins/plugin_test/test-plugin.ui
@@ -14,8 +14,8 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,1">
+    <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="font">
        <font>
@@ -27,6 +27,13 @@
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>This is a simple plugin</string>
       </property>
      </widget>
     </item>
