--- a/plugins/Visar/Visar1.ui
+++ b/plugins/Visar/Visar1.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>nVISAR1</class>
- <widget class="QMainWindow" name="nVISAR1">
+ <class>Visar1</class>
+ <widget class="QMainWindow" name="Visar1">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -224,7 +224,7 @@
          </widget>
         </item>
         <item>
-         <widget class="nVisarPlot" name="plotVelocity" native="true">
+         <widget class="VisarPlot" name="plotVelocity" native="true">
           <property name="mouseTracking">
            <bool>true</bool>
           </property>
@@ -870,13 +870,13 @@
   <customwidget>
    <class>nSOPPlot</class>
    <extends>QWidget</extends>
-   <header>nVisar.h</header>
+   <header>Visar.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>nVisarPlot</class>
+   <class>VisarPlot</class>
    <extends>QWidget</extends>
-   <header>nVisar.h</header>
+   <header>Visar.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
