--- a/plugins/Visar/Visar3.ui
+++ b/plugins/Visar/Visar3.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>nVISAR3</class>
- <widget class="QWidget" name="nVISAR3">
+ <class>Visar3</class>
+ <widget class="QWidget" name="Visar3">
   <property name="geometry">
    <rect>
     <x>0</x>
