--- a/plugins/test/test.ui
+++ b/plugins/test/test.ui
@@ -15,6 +15,17 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0">
+    <item row="2" column="0">
+     <widget class="QPlainTextEdit" name="plainTextEdit">
+      <property name="plainText">
+       <string>This is a simple plugin which inherits nGenericPan and reimplements the mouseAtMatrix slot
+</string>
+      </property>
+      <property name="textInteractionFlags">
+       <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+      </property>
+     </widget>
+    </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="font">
@@ -23,17 +34,10 @@
        </font>
       </property>
       <property name="text">
-       <string>Hi! I'm a test plugin!</string>
+       <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>This is a simple plugin</string>
       </property>
      </widget>
     </item>
