fix resource files (icons is separated)

--- a/UIs/nAbout.ui
+++ b/UIs/nAbout.ui
@@ -214,7 +214,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
