--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -587,7 +587,7 @@
   <tabstop>colorbarTabs</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
