--- a/UIs/nCutoffMask.ui
+++ b/UIs/nCutoffMask.ui
@@ -188,7 +188,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
