--- a/UIs/nGhost.ui
+++ b/UIs/nGhost.ui
@@ -309,7 +309,7 @@
   <tabstop>erasePrevious</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
