--- a/UIs/nInterferometry.ui
+++ b/UIs/nInterferometry.ui
@@ -1080,7 +1080,7 @@
   <tabstop>doMaskCutoff</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
