--- a/UIs/nInterferometry1.ui
+++ b/UIs/nInterferometry1.ui
@@ -256,7 +256,7 @@
   <tabstop>numAngle</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
