--- a/UIs/nLineoutBoth.ui
+++ b/UIs/nLineoutBoth.ui
@@ -144,7 +144,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
