--- a/UIs/nPreferences.ui
+++ b/UIs/nPreferences.ui
@@ -603,7 +603,7 @@
   <tabstop>openclDescription</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
