--- a/UIs/nWavelet.ui
+++ b/UIs/nWavelet.ui
@@ -1192,7 +1192,7 @@
   <tabstop>erasePreviuos</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
