--- a/UIs/nAffine.ui
+++ b/UIs/nAffine.ui
@@ -329,7 +329,7 @@
   <tabstop>B12</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
