--- a/UIs/nCustomPlot.ui
+++ b/UIs/nCustomPlot.ui
@@ -524,7 +524,7 @@
   <tabstop>fontTitle</tabstop>
  </tabstops>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
