--- a/UIs/nLineout.ui
+++ b/UIs/nLineout.ui
@@ -184,7 +184,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
