--- a/UIs/nPython.ui
+++ b/UIs/nPython.ui
@@ -289,7 +289,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
