--- a/UIs/nWinList.ui
+++ b/UIs/nWinList.ui
@@ -309,7 +309,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections>
   <connection>
