--- a/UIs/nZoomWin.ui
+++ b/UIs/nZoomWin.ui
@@ -116,7 +116,7 @@
   </action>
  </widget>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
