--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -880,7 +880,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../qrc/icons.qrc"/>
+  <include location="../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
