--- a/plugins/Visar/Visar2.ui
+++ b/plugins/Visar/Visar2.ui
@@ -429,7 +429,7 @@
   <tabstop>multRef</tabstop>
  </tabstops>
  <resources>
-  <include location="../../qrc/icons.qrc"/>
+  <include location="../../resources/icons/"/>
  </resources>
  <connections/>
 </ui>
