--- a/UIs/nPanHelp.ui
+++ b/UIs/nPanHelp.ui
@@ -83,10 +83,11 @@
    <addaction name="actionBack"/>
    <addaction name="actionHome"/>
    <addaction name="actionForward"/>
+   <addaction name="actionPrint"/>
   </widget>
   <action name="actionHome">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/home.png</normaloff>:/icons/home.png</iconset>
    </property>
    <property name="text">
@@ -95,7 +96,7 @@
   </action>
   <action name="actionBack">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/back.png</normaloff>:/icons/back.png</iconset>
    </property>
    <property name="text">
@@ -107,7 +108,7 @@
   </action>
   <action name="actionForward">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../resources/icons/icons.qrc">
      <normaloff>:/icons/forward.png</normaloff>:/icons/forward.png</iconset>
    </property>
    <property name="text">
@@ -115,6 +116,15 @@
    </property>
    <property name="toolTip">
     <string>Forward</string>
+   </property>
+  </action>
+  <action name="actionPrint">
+   <property name="icon">
+    <iconset resource="../resources/icons/icons.qrc">
+     <normaloff>:/icons/print.png</normaloff>:/icons/print.png</iconset>
+   </property>
+   <property name="text">
+    <string>Print</string>
    </property>
   </action>
  </widget>
