movig ui stuff as private inheritance

--- a/plugins/FindPeaks/FindPeaks.ui
+++ b/plugins/FindPeaks/FindPeaks.ui
@@ -343,7 +343,7 @@
    <addaction name="actionClipboard"/>
    <addaction name="actionTxt"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar">
+  <widget class="QStatusBar" name="statusbar">
    <property name="font">
     <font>
      <pointsize>10</pointsize>
