--- a/plugins/Visar/Visar1.ui
+++ b/plugins/Visar/Visar1.ui
@@ -719,7 +719,7 @@
   </widget>
   <action name="actionLoadPref">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/loadPref.png</normaloff>:/icons/loadPref.png</iconset>
    </property>
    <property name="text">
@@ -731,7 +731,7 @@
   </action>
   <action name="actionSavePref">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/savePref.png</normaloff>:/icons/savePref.png</iconset>
    </property>
    <property name="text">
@@ -743,7 +743,7 @@
   </action>
   <action name="actionSaveTxt">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
    </property>
    <property name="text">
@@ -755,7 +755,7 @@
   </action>
   <action name="actionGuess">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
    </property>
    <property name="text">
@@ -767,7 +767,7 @@
   </action>
   <action name="actionRefresh">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/refresh.png</normaloff>:/icons/refresh.png</iconset>
    </property>
    <property name="text">
@@ -779,7 +779,7 @@
   </action>
   <action name="actionRect1">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -791,7 +791,7 @@
   </action>
   <action name="actionRect2">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -806,7 +806,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/noAutoRefresh.png</normaloff>
      <normalon>:/autoRefresh</normalon>:/icons/noAutoRefresh.png</iconset>
    </property>
@@ -819,7 +819,7 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
    </property>
    <property name="text">
@@ -831,7 +831,7 @@
   </action>
   <action name="actionRect3">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -843,7 +843,7 @@
   </action>
   <action name="actionSaveTxtMultiple">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/saveTxtMultiple.png</normaloff>:/icons/saveTxtMultiple.png</iconset>
    </property>
    <property name="text">
@@ -855,7 +855,7 @@
   </action>
   <action name="showFiltered">
    <property name="icon">
-    <iconset resource="../qrc/icons.qrc">
+    <iconset resource="../../resources/icons/icons.qrc">
      <normaloff>:/icons/gearPy.png</normaloff>:/icons/gearPy.png</iconset>
    </property>
    <property name="text">
@@ -894,7 +894,7 @@
   <tabstop>sopCalibA</tabstop>
  </tabstops>
  <resources>
-  <include location="../../resources/icons/"/>
+  <include location="../../resources/icons/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
